...

      return Scaffold(
        backgroundColor: theme.backgroundTertiary,
        appBar: IrmaAppBar(
          titleTranslationKey: 'passport.scan.title',
          leading: YiviBackButton(
            key: const Key('bottom_bar_secondary'),
            onTap: widget.onCancel,
          ),
        ),
        body: MRZScanner(
          controller: controller,
          showOverlay: true,
          onSuccess: (mrzResult, lines) async {
            widget.onSuccess(mrzResult);
          },
        ),
        floatingActionButton: _ManualEntryButton(
          key: const Key('bottom_bar_primary'),
          onTap: widget.onManualAdd,
        ),
      );
    });
  }
}
...
