...
    "title": "New terms and conditions",
    "explanation_markdown": "The management of Yivi has recently been transferred to another organization ([Yivi B.V.](https://yivi.app/en/about_yivi)).\n\nTherefore, the terms and conditions have changed slightly.\n\nWe ask you to [read them]({terms_url}) and agree to them below.",
    "accept": "Accept",
    "dismiss": "Not now"
  },
  "action_feedback": {
    "ok": "OK"
  },
  "activity": {
    "data_deleted": "Data deleted",
    "data_deleted_semantics": "Data deleted from {issuerName} on {date}",
    "data_received": "Data received",
    "data_received_semantics": "Data received from {otherParty} on {date}",
...
    "message_signed": "Message signed",
    "signed_message_semantics": "Message signed from {otherParty} on {date}",
    "shared_with": "Shared with",
    "shared_data": "Shared data",
    "received_data": "Received data",
    "deleted_data": "Deleted data",
    "empty_placeholder": "There are no logged activities yet"
  },
  "arrow_back": {
    "no_success": "Cancelled",
    "disclosure_success": "Success, your data has been shared",
    "issuance_success": "Success, the data has been added",
    "signature_success": "Success, the message has been signed",
...
